force-app/main/default/objects/CorporateFinancialStatement__c/CorporateFinancialStatement__c.object-meta.xml
<CustomObject>
    <label>재무제표</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>재무제표 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>재무제표</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>