force-app/main/default/objects/CorporateFinancialStatement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>법인 고객</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>재무제표</relationshipLabel>
    <relationshipName>Financial_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>