force-app/main/default/objects/CorporateFinancialStatement__c/fields/Cash_And_Equivalents__c.field-meta.xml
<CustomField>
    <fullName>Cash_And_Equivalents__c</fullName>
    <label>현금및현금성자산</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>