force-app/main/default/objects/CorporateFinancialStatement__c/fields/Cash_Asset_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Cash_Asset_Ratio__c</fullName>
    <label>현금자산비율</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>