force-app/main/default/objects/CorporateFinancialStatement__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <externalId>true</externalId>
    <label>외부 키</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>