force-app/main/default/objects/CorporateFinancialStatement__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>회계연도</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>