force-app/main/default/objects/CorporateFinancialStatement__c/fields/Fiscal_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Text__c</fullName>
    <formula>TEXT(Fiscal_Year__c)</formula>
    <label>회계연도</label>
    <type>Text</type>
</CustomField>