force-app/main/default/objects/CorporateFinancialStatement__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DART corp_code(Assigned_Company_Code__c)가 일치하는 발굴 리드(Lead). 재무제표 수집 시 corp_code로 매칭되는 Lead가 있으면 이 룩업을 채워 아직 Account로 전환되지 않은 발굴 대상과 재무 데이터를 연결한다.</description>
    <inlineHelpText>DART 기업 코드가 일치하는 발굴 리드가 자동 연결됩니다. 매칭되는 리드가 없으면 비워집니다.</inlineHelpText>
    <label>발굴 리드</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>재무제표</relationshipLabel>
    <relationshipName>Financial_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>