force-app/main/default/objects/CorporateFinancialStatement__c/fields/Long_Term_Borrowings__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Borrowings__c</fullName>
    <description>DART 재무제표의 장기차입금 금액. 단기차입금·사채와 합산해 총차입금을 산정하며, 차입금의존도(회사채 적합도) 계산에 쓰인다.</description>
    <inlineHelpText>DART 공시 기준 장기차입금 금액(원). 총차입금 = 단기차입금 + 장기차입금 + 사채.</inlineHelpText>
    <label>장기차입금</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>