force-app/main/default/objects/CorporateFinancialStatement__c/fields/Operating_Income__c.field-meta.xml
<CustomField>
    <fullName>Operating_Income__c</fullName>
    <label>영업이익</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>