force-app/main/default/objects/CorporateFinancialStatement__c/fields/Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Period_Type__c</fullName>
    <label>기간 구분</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1분기</fullName>
            </value>
            <value>
                <fullName>2분기</fullName>
            </value>
            <value>
                <fullName>3분기</fullName>
            </value>
            <value>
                <fullName>4분기</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>