force-app/main/default/objects/CorporateFinancialStatement__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>매출액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>