force-app/main/default/objects/CorporateFinancialStatement__c/fields/Short_Term_Financial_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Financial_Instruments__c</fullName>
    <description>DART 재무제표의 단기금융상품 금액. 현금자산비율 계산 시 현금및현금성자산과 합산해 RP 운용 여유자금을 산정한다.</description>
    <inlineHelpText>DART 공시 기준 단기금융상품 금액(원). 현금및현금성자산과 합쳐 현금자산비율을 계산한다.</inlineHelpText>
    <label>단기금융상품</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>