force-app/main/default/objects/CorporateFinancialStatement__c/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <label>총자산</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>