force-app/main/default/objects/CorporateFinancialStatement__c/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <label>총부채</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>