force-app/main/default/objects/CorporateFinancialStatement__c/listViews/All_view.listView-meta.xml
<ListView>
    <fullName>All_view</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All view</label>
</ListView>